Bug 154294 - kmail layout not saved, have to reconfigure each it is loaded.
Summary: kmail layout not saved, have to reconfigure each it is loaded.
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: GUI (other bugs)
Version First Reported In: SVN trunk (KDE 4)
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Thomas McGuire
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-12-19 00:47 UTC by Keith Waugh
Modified: 2007-12-19 20:20 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Keith Waugh 2007-12-19 00:47:38 UTC
Version:           1.9.50 (using KDE KDE 3.97.0)
Installed from:    SuSE RPMs
OS:                Linux

Every time kmail 1.9.50 is loaded - using Kontact 1.2 in kde 4 rc2 - only Kontact application bar and Favorite Folders is visible. Mail windows and Folders list are moved over to periphery of window frame. Clicking on re-sizing points allows the kmail window to be correctly re-configured again.
Comment 1 Thomas McGuire 2007-12-19 18:24:09 UTC
I'll fix this as soon as possible.
I introduced this bug with the recent layout code refactoring, I guess I forgot to test inside Kontact.
Comment 2 Thomas McGuire 2007-12-19 20:20:27 UTC
SVN commit 750625 by tmcguire:

Delay the layouting of the widget with QTimer::singleShot( 0, ... ).
When first trying to layout, the size of the main widget is not yet known
and has invalid values, which leads to incorrect splitter positions.
After the first event loop pass, the size of the main widget is known and
it works.

BUG: 154294



 M  +16 -3     kmmainwidget.cpp  
 M  +1 -1      kmmainwidget.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=750625