Delay the layouting of the widget with QTimer::singleShot( 0, ... ). When first trying to layout, the size of the main widget is not yet known and has invalid values, which leads to incorrect splitter positions. After the first event loop pass, the size of the main widget is known and it works.

BUG: 154294


svn path=/trunk/KDE/kdepim/; revision=750625